# multimodel-condishAI

./: .gitignore  Dockerfile  README.md  pyproject.toml
api/: __init__.py  damage_analyzer.py  floor_plan.py  lease_agent.py  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: CameraInspection.jsx  CheckInManager.jsx  DamageReport.jsx  FloorPlan3DViewer.jsx  FloorPlanUpload.jsx  Header.jsx  InspectionPanel.jsx  LeaseUpload.jsx
frontend/src/store/: useStore.js
frontend/src/styles/: App.css
